--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -1929,16 +1929,16 @@ fieldset[disabled] .btn {
     transition: none !important;
   }
 }
-.dir.btn-save[class][class]:focus-visible {
+.dir.btn-wishlist-bordered[class][class]:focus-visible {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.btn-save[class][class]:focus-visible {
+  .dir.btn-wishlist-bordered[class][class]:focus-visible {
     transition: none;
   }
 }
-.btn-save[class][class] {
+.btn-wishlist-bordered[class][class] {
   font-family: var(--e-ls-qkw);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
@@ -1964,7 +1964,7 @@ fieldset[disabled] .btn {
   width: calc(24px + var(--fgg-f-l-a));
   height: calc(24px + var(--fgg-f-l-a));
 }
-.dir.btn-save[class][class] {
+.dir.btn-wishlist-bordered[class][class] {
   border-width: 1px;
   background-color: transparent;
   border-radius: 50%;
@@ -1975,59 +1975,59 @@ fieldset[disabled] .btn {
   padding: 2px 0 0;
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.btn-save[class][class] {
+  .dir.btn-wishlist-bordered[class][class] {
     -webkit-transition: none;
     transition: none;
   }
 }
-.dir.btn-save[class][class]::-moz-focus-inner {
+.dir.btn-wishlist-bordered[class][class]::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.btn-save[class][class]:focus::-moz-focus-inner {
+.dir.btn-wishlist-bordered[class][class]:focus::-moz-focus-inner {
   border: none;
 }
-.btn-save[class][class]:-moz-focusring {
+.btn-wishlist-bordered[class][class]:-moz-focusring {
   outline: 0;
 }
-.dir.btn-save[class][class]:focus-visible {
+.dir.btn-wishlist-bordered[class][class]:focus-visible {
   -webkit-transition: box-shadow 0.2s;
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.btn-save[class][class]:focus-visible {
+  .dir.btn-wishlist-bordered[class][class]:focus-visible {
     -webkit-transition: none;
     transition: none;
   }
 }
-.dir.btn-save[class][class]:focus[data-focus-visible-added] {
+.dir.btn-wishlist-bordered[class][class]:focus[data-focus-visible-added] {
   -webkit-transition: box-shadow 0.2s;
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.btn-save[class][class]:focus[data-focus-visible-added] {
+  .dir.btn-wishlist-bordered[class][class]:focus[data-focus-visible-added] {
     -webkit-transition: none;
     transition: none;
   }
 }
-.dir.btn-save[class][class]:active {
+.dir.btn-wishlist-bordered[class][class]:active {
   -webkit-transform: scale(0.96);
   -ms-transform: scale(0.96);
   transform: scale(0.96);
 }
-.btn-save[class][class]:disabled {
+.btn-wishlist-bordered[class][class]:disabled {
   opacity: 1;
 }
-.dir.btn-save[class][class]:focus-visible {
+.dir.btn-wishlist-bordered[class][class]:focus-visible {
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px rgba(255, 255, 255, 0.8);
 }
-.dir.btn-save[class][class]:focus[data-focus-visible-added] {
+.dir.btn-wishlist-bordered[class][class]:focus[data-focus-visible-added] {
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px rgba(255, 255, 255, 0.8);
 }
-.dir.btn-save[class][class]:active {
+.dir.btn-wishlist-bordered[class][class]:active {
   -webkit-transform: scale(0.92);
   -ms-transform: scale(0.92);
   transform: scale(0.92);
