--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -7985,7 +7985,7 @@ select[disabled] {
   }
 }
 
-.lg5zm89[class][class] {
+.next-card__time-list[class][class] {
   scrollbar-width: none;
   display: flex;
   flex-wrap: nowrap;
@@ -7994,52 +7994,52 @@ select[disabled] {
   scroll-padding: 50%;
   scroll-snap-type: x mandatory;
 }
-.dir.lg5zm89[class][class] {
+.dir.next-card__time-list[class][class] {
   padding: 0;
 }
-.dir-ltr.lg5zm89[class][class] {
+.dir-ltr.next-card__time-list[class][class] {
   margin: var(--margin-top, 0) var(--margin-right, 0) var(--margin-bottom, 0)
     var(--margin-left, 0);
 }
-.lg5zm89[class][class]::-webkit-scrollbar {
+.next-card__time-list[class][class]::-webkit-scrollbar {
   display: none;
 }
 @media (min-width: 744px) {
-  .lg5zm89[class][class] {
+  .next-card__time-list[class][class] {
     overflow: visible;
   }
 }
-.ift8ber[class][class] {
+.next-card__time-item[class][class] {
   scroll-snap-align: center;
 }
-.dir.ift8ber[class][class] {
+.dir.next-card__time-item[class][class] {
   margin-bottom: var(--fgg-f-l-a);
 }
-.dir-ltr.ift8ber[class][class] {
+.dir-ltr.next-card__time-item[class][class] {
   margin-right: 6px;
 }
-.dir-ltr.ift8ber[class][class]:last-child {
+.dir-ltr.next-card__time-item[class][class]:last-child {
   margin-right: 0;
 }
-.l1nmlz0v[class][class] {
+.next-card__btn[class][class] {
   color: var(--f-k-smk-x);
   font-weight: var(--jx-zk-pv);
   white-space: nowrap;
 }
-.dir.l1nmlz0v[class][class] {
+.dir.next-card__btn[class][class] {
   background: var(--f-mkcy-f);
   border-radius: var(--i-g-gvoq);
   box-shadow: var(--availability-list-item_box-shadow);
   padding: var(--b-y-unon);
 }
 @media (min-width: 744px) {
-  .dir.l1nmlz0v[class][class] {
+  .dir.next-card__btn[class][class] {
     border-radius: var(--go-h-jh-l);
     padding-top: var(--fgg-f-l-a);
     padding-bottom: var(--fgg-f-l-a);
   }
 }
-.l1tn5hkm[class][class] {
+.next-card__btn-text-size[class][class] {
   font-size: var(--f-cv-j-j-p);
   line-height: var(--f-l-h-bac);
 }
@@ -8073,36 +8073,36 @@ select[disabled] {
 .l1dijiv4[class][class]:-moz-focusring {
   outline: 0;
 }
-.ce3dtev[class][class] {
+.next-card[class][class] {
   display: flex;
   flex-direction: row;
   overflow: hidden;
 }
-.dir.ce3dtev[class][class] {
+.dir.next-card[class][class] {
   border: 1px solid var(--j-qkgmf);
   border-radius: var(--i-g-gvoq);
   padding: var(--b-y-unon);
 }
-.dir-ltr.ce3dtev[class][class] {
+.dir-ltr.next-card[class][class] {
   padding-right: var(--jaa-ni-h);
 }
-.m1hz84te[class][class] {
+.next-card__media[class][class] {
   width: 123px;
 }
-.i1o4vsop[class][class] {
+.next-card__body[class][class] {
   display: flex;
   flex-direction: column;
   flex: 1;
 }
-.dir-ltr.i1o4vsop[class][class] {
+.dir-ltr.next-card__body[class][class] {
   margin-left: var(--jaa-ni-h);
 }
-.sx3hjb6[class][class] {
+.next-card__btn-wishlist-wrapper[class][class] {
   display: flex;
   align-self: flex-end;
   height: 20px;
 }
-.dir.sx3hjb6[class][class] {
+.dir.next-card__btn-wishlist-wrapper[class][class] {
   margin-bottom: var(--h-x-sf-jw);
 }
 
@@ -13316,7 +13316,7 @@ h3:first-child {
     padding-right: 6px !important;
   }
 }
-._1qi0sj8 {
+.btn-wishlist {
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
   appearance: none !important;
@@ -13336,108 +13336,108 @@ h3:first-child {
   -moz-transition: transform 0.25s !important;
   transition: -ms-transform 0.25s, -webkit-transform 0.25s, transform 0.25s !important;
 }
-._1qi0sj8:focus-visible {
+.btn-wishlist:focus-visible {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: none !important;
 }
-._1qi0sj8:focus-visible::-moz-focus-inner {
+.btn-wishlist:focus-visible::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1qi0sj8:focus-visible:focus::-moz-focus-inner {
+.btn-wishlist:focus-visible:focus::-moz-focus-inner {
   border: none !important;
 }
-._1qi0sj8:focus-visible:-moz-focusring {
+.btn-wishlist:focus-visible:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1qi0sj8:focus-visible {
+  .btn-wishlist:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1qi0sj8:focus-visible::before {
+.btn-wishlist:focus-visible::before {
   box-shadow: 0 0 0 2px #222, 0 0 0 4px rgba(255, 255, 255, 0.8) !important;
   background: #f7f7f7 !important;
 }
-._1qi0sj8:focus[data-focus-visible-added] {
+.btn-wishlist:focus[data-focus-visible-added] {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: none !important;
 }
-._1qi0sj8:focus[data-focus-visible-added]::-moz-focus-inner {
+.btn-wishlist:focus[data-focus-visible-added]::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1qi0sj8:focus[data-focus-visible-added]:focus::-moz-focus-inner {
+.btn-wishlist:focus[data-focus-visible-added]:focus::-moz-focus-inner {
   border: none !important;
 }
-._1qi0sj8:focus[data-focus-visible-added]:-moz-focusring {
+.btn-wishlist:focus[data-focus-visible-added]:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1qi0sj8:focus[data-focus-visible-added] {
+  .btn-wishlist:focus[data-focus-visible-added] {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1qi0sj8:focus[data-focus-visible-added]::before {
+.btn-wishlist:focus[data-focus-visible-added]::before {
   box-shadow: 0 0 0 2px #222, 0 0 0 4px rgba(255, 255, 255, 0.8) !important;
   background: #f7f7f7 !important;
 }
-._1qi0sj8:disabled {
+.btn-wishlist:disabled {
   opacity: 0.5 !important;
   cursor: not-allowed !important;
   color: #ddd !important;
 }
-._1qi0sj8:disabled::before {
+.btn-wishlist:disabled::before {
   background: 0 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1qi0sj8 {
+  .btn-wishlist {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
 @media (hover: hover) {
-  ._1qi0sj8:hover {
+  .btn-wishlist:hover {
     color: #000 !important;
   }
-  ._1qi0sj8:hover::before {
+  .btn-wishlist:hover::before {
     background: #f7f7f7 !important;
   }
 }
-._1qi0sj8:active {
+.btn-wishlist:active {
   color: #000 !important;
   -webkit-transform: scale(0.92) !important;
   -ms-transform: scale(0.92) !important;
   transform: scale(0.92) !important;
 }
-._1qi0sj8:active::before {
+.btn-wishlist:active::before {
   background: #f7f7f7 !important;
 }
-._1qi0sj8::-moz-focus-inner {
+.btn-wishlist::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1qi0sj8:focus::-moz-focus-inner {
+.btn-wishlist:focus::-moz-focus-inner {
   border: none !important;
 }
-._1qi0sj8:-moz-focusring {
+.btn-wishlist:-moz-focusring {
   outline: 0 !important;
 }
-._1qi0sj8::before {
+.btn-wishlist::before {
   content: '' !important;
   display: block !important;
   position: absolute !important;
@@ -22587,7 +22587,7 @@ _qgvrjoy {
     width: 33.333333333333336% !important;
   }
 }
-._1cb9q3xq {
+.lite-image__default {
   top: 0 !important;
   bottom: 0 !important;
   left: 0 !important;
@@ -31017,7 +31017,7 @@ html :where(img[class*='wp-image-']) {
 .dir.c53epf4[class][class] {
   margin-bottom: 24px;
 }
-._1yydbd74 {
+.link {
   cursor: pointer !important;
   position: relative !important;
   touch-action: manipulation !important;
@@ -34839,14 +34839,6 @@ tr.show-desktop {
     display: none !important;
   }
 }
-._i5m7e6w {
-  display: none !important;
-}
-@media (min-width: 1440px) {
-  ._i5m7e6w {
-    display: block !important;
-  }
-}
 ._1wtn5n0 {
   -ms-grid-columns: 1fr !important;
   display: -ms-grid !important;
@@ -38526,7 +38518,7 @@ tr.show-desktop {
 ._1wxj0qrv:active {
   color: #222 !important;
 }
-._1yydbd74 {
+.link {
   cursor: pointer !important;
   position: relative !important;
   -ms-touch-action: manipulation !important;
@@ -38554,81 +38546,81 @@ tr.show-desktop {
   height: 100% !important;
   width: 100% !important;
 }
-._1yydbd74:focus-visible {
+.link:focus-visible {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x) !important;
 }
-._1yydbd74:focus-visible::-moz-focus-inner {
+.link:focus-visible::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1yydbd74:focus-visible:focus::-moz-focus-inner {
+.link:focus-visible:focus::-moz-focus-inner {
   border: none !important;
 }
-._1yydbd74:focus-visible:-moz-focusring {
+.link:focus-visible:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1yydbd74:focus-visible {
+  .link:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1yydbd74:focus[data-focus-visible-added] {
+.link:focus[data-focus-visible-added] {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x) !important;
 }
-._1yydbd74:focus[data-focus-visible-added]::-moz-focus-inner {
+.link:focus[data-focus-visible-added]::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1yydbd74:focus[data-focus-visible-added]:focus::-moz-focus-inner {
+.link:focus[data-focus-visible-added]:focus::-moz-focus-inner {
   border: none !important;
 }
-._1yydbd74:focus[data-focus-visible-added]:-moz-focusring {
+.link:focus[data-focus-visible-added]:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1yydbd74:focus[data-focus-visible-added] {
+  .link:focus[data-focus-visible-added] {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1yydbd74:active {
+.link:active {
   -webkit-transform: none !important;
   -ms-transform: none !important;
   transform: none !important;
 }
-._1yydbd74:disabled {
+.link:disabled {
   cursor: not-allowed !important;
   opacity: 1 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1yydbd74 {
+  .link {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1yydbd74::-moz-focus-inner {
+.link::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1yydbd74:focus::-moz-focus-inner {
+.link:focus::-moz-focus-inner {
   border: none !important;
 }
-._1yydbd74:-moz-focusring {
+.link:-moz-focusring {
   outline: 0 !important;
 }
 ._192v41sf {
@@ -42762,7 +42754,7 @@ tr.show-desktop {
     margin-bottom: 10px;
   }
 }
-.p1h685x0[class][class] {
+.activities-card__price-info[class][class] {
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -42773,15 +42765,15 @@ tr.show-desktop {
   display: -ms-flexbox;
   display: flex;
 }
-.dir-ltr.p1h685x0[class][class] {
+.dir-ltr.activities-card__price-info[class][class] {
   margin: var(--margin-top, 0) var(--margin-right, 0) var(--margin-bottom, 0)
     var(--margin-left, 0);
 }
-.dir-rtl.p1h685x0[class][class] {
+.dir-rtl.activities-card__price-info[class][class] {
   margin: var(--margin-top, 0) var(--margin-left, 0) var(--margin-bottom, 0)
     var(--margin-right, 0);
 }
-.p1ian262[class][class] {
+.next-card__price-info[class][class] {
   font-size: var(--c-zdwk-p);
   line-height: var(--j-p-z-kco);
 }
@@ -42793,7 +42785,7 @@ tr.show-desktop {
   font-size: var(--ll-l-ys-f);
   line-height: var(--f-xgviq);
 }
-.p1iotb8f[class][class] {
+.activities-card__price[class][class] {
   font-weight: var(--h-oqhch);
 }
 .s1xm4lcr[class][class] {
@@ -42808,11 +42800,11 @@ tr.show-desktop {
 .dir-rtl.s1xm4lcr[class][class] {
   margin-left: var(--h-x-sf-jw);
 }
-.f13o420o[class][class] {
+.activities-card__starting-price[class][class] {
   font-weight: var(--h-oqhch);
 }
 
-.c1x635tr[class][class] {
+.activities-card__lite-image-wrapper[class][class] {
   position: relative;
 }
 .activities-card__btn-pause[class][class] {
@@ -43042,18 +43034,18 @@ tr.show-desktop {
   margin: var(--margin-top, 0) var(--margin-left, 0) var(--margin-bottom, 0)
     var(--margin-right, 0);
 }
-.c13dz2y3[class][class] {
+.activities-card__text-sm[class][class] {
   font-size: var(--f-cv-j-j-p);
   line-height: var(--f-l-h-bac);
 }
-.ststif[class][class] {
+.activities-card__separator[class][class] {
   color: var(--theme_typography-color-secondary, var(--fo-jk-r-s));
 }
-.dir.ststif[class][class] {
+.dir.activities-card__separator[class][class] {
   margin-left: var(--h-x-sf-jw);
   margin-right: var(--h-x-sf-jw);
 }
-.mivm6tg[class][class] {
+.activities-card__location[class][class] {
   line-height: var(--j-p-z-kco);
   overflow: hidden;
   text-overflow: ellipsis;
@@ -43063,11 +43055,11 @@ tr.show-desktop {
   color: var(--theme_typography-color-secondary, var(--fo-jk-r-s));
 }
 @supports (overflow: clip) {
-  .mivm6tg[class][class] {
+  .activities-card__location[class][class] {
     overflow: clip;
   }
 }
-.mig889x[class][class] {
+.activities-card__location--small[class][class] {
   line-height: var(--f-l-h-bac);
   overflow: hidden;
   text-overflow: ellipsis;
@@ -43076,7 +43068,7 @@ tr.show-desktop {
   -webkit-line-clamp: 1;
 }
 @supports (overflow: clip) {
-  .mig889x[class][class] {
+  .activities-card__location--small[class][class] {
     overflow: clip;
   }
 }
@@ -43196,7 +43188,7 @@ tr.show-desktop {
     overflow: clip;
   }
 }
-.sftrzuu[class][class] {
+.activities-card__text-sm[class][class] {
   font-size: var(--f-cv-j-j-p);
   line-height: var(--f-l-h-bac);
 }
@@ -43291,7 +43283,7 @@ tr.show-desktop {
     overflow: clip;
   }
 }
-.t1e6bw26[class][class] {
+.activities-card__title-sm[class][class] {
   font-size: var(--c-zdwk-p);
   line-height: var(--j-p-z-kco);
   line-height: var(--j-p-z-kco);
@@ -43302,7 +43294,7 @@ tr.show-desktop {
   -webkit-line-clamp: var(--title_num-lines);
 }
 @supports (overflow: clip) {
-  .t1e6bw26[class][class] {
+  .activities-card__title-sm[class][class] {
     overflow: clip;
   }
 }
@@ -43839,7 +43831,7 @@ tr.show-desktop {
     background-color: var(--header_brand-color, var(--ihf-tp-q)) !important;
   }
 }
-._1qi0sj8::before {
+.btn-wishlist::before {
   content: '' !important;
   display: block !important;
   position: absolute !important;
@@ -43854,12 +43846,12 @@ tr.show-desktop {
   padding-right: 16px !important;
 }
 @media (hover: hover) {
-  ._1qi0sj8:hover {
+  .btn-wishlist:hover {
     color: #000 !important;
   }
 }
 @media (hover: hover) {
-  ._1qi0sj8:hover::before {
+  .btn-wishlist:hover::before {
     background: #f7f7f7 !important;
   }
 }
@@ -44192,14 +44184,14 @@ tr.show-desktop {
   background-position: 50% 50% !important;
   background-repeat: no-repeat !important;
 }
-._1cb9q3xq {
+.lite-image__default {
   inset: 0 !important;
   height: 0 !important;
   width: 0 !important;
   position: absolute !important;
 }
 @supports (object-fit: cover) {
-  ._1cb9q3xq {
+  .lite-image__default {
     height: 100% !important;
     width: 100% !important;
   }
@@ -47422,7 +47414,7 @@ tr.show-desktop {
     }
   }
 }
-.lite-image__default {
+.lite-image__default-static {
   top: 0 !important;
   bottom: 0 !important;
   left: 0 !important;
@@ -47453,7 +47445,7 @@ tr.show-desktop {
   background-position: 50% 50% !important;
   background-repeat: no-repeat !important;
 }
-.lite-image__wrapper {
+.lite-image__container {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: center !important;
@@ -51744,7 +51736,7 @@ tr.show-desktop {
   right: 24px !important;
   top: 24px !important;
 }
-._1qi0sj8 {
+.btn-wishlist {
   appearance: none !important;
   display: inline-block !important;
   border-radius: 50% !important;
@@ -52661,7 +52653,7 @@ textarea {
     padding-right: 24px !important;
   }
 }
-.lite-image__wrapper {
+.lite-image__container {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   position: absolute !important;
@@ -52670,14 +52662,14 @@ textarea {
   align-items: center !important;
   justify-content: center !important;
 }
-.lite-image__default {
+.lite-image__default-static {
   inset: 0 !important;
   height: 0 !important;
   width: 0 !important;
   position: absolute !important;
 }
 @supports (object-fit: cover) {
-  .lite-image__default {
+  .lite-image__default-static {
     height: 100% !important;
     width: 100% !important;
     position: static !important;
