--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -61,13 +61,11 @@
     display: none !important;
   }
 }
-
 @media (min-width: 1440px) {
   .d-xl-block {
     display: block !important;
   }
 }
-
 .container {
   max-width: 1760px;
   width: 100%;
@@ -290,95 +288,6 @@
   display: table-cell !important;
   vertical-align: middle !important;
 }
-.lite-image-absolute {
-  top: 0 !important;
-  bottom: 0 !important;
-  left: 0 !important;
-  right: 0 !important;
-  height: 0 !important;
-  width: 0 !important;
-  position: absolute !important;
-}
-@supports (object-fit: cover) {
-  .lite-image-absolute {
-    height: 100% !important;
-    width: 100% !important;
-  }
-}
-.lite-image__body {
-  display: table !important;
-  position: relative !important;
-  height: 100% !important;
-  width: 100% !important;
-}
-.lite-image__text-container {
-  display: table-cell !important;
-  vertical-align: middle !important;
-}
-.lite-image {
-  padding-top: var(--dls-liteimage-padding-top) !important;
-  position: relative !important;
-  -webkit-flex: 1 !important;
-  -ms-flex: 1 1 0% !important;
-  flex: 1 !important;
-  background-position: 50% 50% !important;
-  background-repeat: no-repeat !important;
-}
-.lite-image__container {
-  -webkit-box-pack: center !important;
-  -ms-flex-pack: center !important;
-  -webkit-box-align: center !important;
-  -ms-flex-align: center !important;
-  position: absolute !important;
-  top: 0 !important;
-  bottom: 0 !important;
-  left: 0 !important;
-  right: 0 !important;
-  display: -webkit-box !important;
-  display: -moz-box !important;
-  display: -ms-flexbox !important;
-  display: -webkit-flex !important;
-  display: flex !important;
-  -webkit-align-items: center !important;
-  align-items: center !important;
-  -webkit-justify-content: center !important;
-  justify-content: center !important;
-}
-.lite-image__default-static {
-  top: 0 !important;
-  bottom: 0 !important;
-  left: 0 !important;
-  right: 0 !important;
-  height: 0 !important;
-  width: 0 !important;
-  position: absolute !important;
-}
-@supports (object-fit: cover) {
-  .lite-image__default-static {
-    height: 100% !important;
-    width: 100% !important;
-    position: static !important;
-  }
-}
-.lite-image__fallback {
-  display: inline-block !important;
-  vertical-align: bottom !important;
-  height: 100% !important;
-  width: 100% !important;
-  position: absolute !important;
-  top: 0 !important;
-  bottom: 0 !important;
-  left: 0 !important;
-  right: 0 !important;
-  background-position: 50% 50% !important;
-  background-repeat: no-repeat !important;
-}
-@supports (object-fit: cover) {
-  .lite-image__fallback {
-    display: none !important;
-    background-image: none !important;
-  }
-}
 .img-middle {
   background-position: 50% 50% !important;
   background-repeat: no-repeat !important;
@@ -386,5 +295,216 @@
 .box-border {
   --webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+.link {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  color: #222 !important;
+  text-decoration: none !important;
+  outline: 0 !important;
+}
+.link:focus-visible {
+  color: #222 !important;
+  border-radius: 4px !important;
+  -webkit-transition: box-shadow 0.2s !important;
+  -moz-transition: box-shadow 0.2s !important;
+  transition: box-shadow 0.2s !important;
+  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
+}
+@media (hover: hover) {
+  .link:hover {
+    cursor: pointer !important;
+    color: #222 !important;
+    text-decoration: none !important;
+  }
+}
+.link:active,
+.link:focus {
+  color: #222 !important;
+  text-decoration: none !important;
+}
+.link:disabled {
+  color: #ddd !important;
+  text-decoration: none !important;
+}
+.link-underline {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  color: #222 !important;
+  text-decoration: underline !important;
+  border-radius: 4px !important;
+  font-weight: 600 !important;
+  text-align: inherit !important;
+  outline: 0 !important;
+}
+.link-underline:focus {
+  color: inherit !important;
+  text-decoration: underline !important;
+}
+.link-underline:visited {
+  color: #222 !important;
+  text-decoration: underline !important;
+}
+@media (hover: hover) {
+  .link-underline:hover {
+    cursor: pointer !important;
+    color: #000 !important;
+    text-decoration: underline !important;
+  }
+}
+.link-underline:active {
+  color: #717171 !important;
+  text-decoration: underline !important;
+}
+.link-underline::-moz-focus-inner {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.link-underline:focus::-moz-focus-inner {
+  border: none !important;
+}
+.link-underline:-moz-focusring {
+  outline: 0 !important;
+}
+.link-underline:focus-visible {
+  color: #222 !important;
+  text-decoration: underline !important;
+  -webkit-transition: box-shadow 0.2s !important;
+  -moz-transition: box-shadow 0.2s !important;
+  transition: box-shadow 0.2s !important;
+  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .link-underline:focus-visible {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+.link-underline:disabled {
+  color: #ddd !important;
+  text-decoration: underline !important;
+}
+.link-underline:disabled:hover {
+  text-decoration: underline !important;
+}
+.link {
+  touch-action: manipulation !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  line-height: inherit !important;
+  font-weight: inherit !important;
+  border-radius: 8px !important;
+  outline: 0 !important;
+  transition: box-shadow 0.2s, -ms-transform 0.1s, -webkit-transform 0.1s,
+    transform 0.1s !important;
+  background: 0 0 !important;
+  border: 1px !important;
+  color: inherit !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  text-align: inherit !important;
+  cursor: pointer !important;
+  position: relative !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  line-height: inherit !important;
+  font-weight: inherit !important;
+  -webkit-transition: box-shadow 0.2s, -webkit-transform 0.1s, transform 0.1s !important;
+  -moz-transition: box-shadow 0.2s, transform 0.1s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  color: inherit !important;
+  display: block !important;
+  text-align: inherit !important;
+  text-decoration: none !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+.link:focus-visible {
+  outline: 0 !important;
+  -webkit-transition: box-shadow 0.2s !important;
+  -moz-transition: box-shadow 0.2s !important;
+  transition: box-shadow 0.2s !important;
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x) !important;
+}
+.link:focus-visible::-moz-focus-inner {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.link:focus-visible:focus::-moz-focus-inner {
+  border: none !important;
+}
+.link:focus-visible:-moz-focusring {
+  outline: 0 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .link:focus-visible {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+.link:focus[data-focus-visible-added] {
+  outline: 0 !important;
+  -webkit-transition: box-shadow 0.2s !important;
+  -moz-transition: box-shadow 0.2s !important;
+  transition: box-shadow 0.2s !important;
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x) !important;
+}
+.link:focus[data-focus-visible-added]::-moz-focus-inner {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.link:focus[data-focus-visible-added]:focus::-moz-focus-inner {
+  border: none !important;
+}
+.link:focus[data-focus-visible-added]:-moz-focusring {
+  outline: 0 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .link:focus[data-focus-visible-added] {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+.link:active {
+  -webkit-transform: none !important;
+  -ms-transform: none !important;
+  transform: none !important;
+}
+.link:disabled {
+  cursor: not-allowed !important;
+  opacity: 1 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .link {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+.link::-moz-focus-inner {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.link:focus::-moz-focus-inner {
+  border: none !important;
+}
+.link:-moz-focusring {
+  outline: 0 !important;
 }
 /* /Utilities */
