--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4114,15 +4114,6 @@ select[disabled] {
     padding-left: 24px;
   }
 }
-.flex-items::after,
-.flex-items::before {
-  display: -webkit-box !important;
-  display: -moz-box !important;
-  display: -ms-flexbox !important;
-  display: -webkit-flex !important;
-  display: flex !important;
-  content: '' !important;
-}
 .contents {
   display: contents !important;
 }
@@ -4758,6 +4749,31 @@ select[disabled] {
   display: -ms-flexbox !important;
   display: -webkit-flex !important;
   display: flex !important;
+}
+.page-shell-mobile {
+  position: relative !important;
+  z-index: 0 !important;
+  min-height: -webkit-calc(100vh + 65px) !important;
+  min-height: -moz-calc(100vh + 65px) !important;
+  min-height: calc(100vh + 65px) !important;
+}
+@supports (padding: env(safe-area-inset-bottom)) {
+  .page-shell-mobile {
+    padding-left: env(safe-area-inset-left) !important;
+    padding-right: env(safe-area-inset-right) !important;
+  }
+}
+@media (min-width: 744px) {
+  .page-shell-mobile {
+    display: none;
+  }
+}
+.page-shell-max-lg-plus {
+  --page-shell-max-content-width: 1440px !important;
+}
+.page-shell {
+  position: relative !important;
+  min-height: 100vh !important;
 }
 /* /Utilities */
 
